# openapi-rust-gen

./: .gitignore  LICENSE.tx  README.md  ex.json  install.bash  main.rb  test.sh  uninstall.bash
crate/: Cargo.toml
crate/src/: main.rs
test/: run.sh
test/schemas/: basic.json  composition.json  defaults.json  enums.json  kitchen_sink.json  oneof_tagged.json  params_and_bodies.json  validation.json
testbed/: Cargo.toml
testbed/src/: main.rs
testgen/: Cargo.toml
testgen/src/: lib.rs
testo/: Cargo.toml
testo/src/: lib.rs
testworker/: Cargo.toml  wrangler.toml
testworker/src/: lib.rs
