[package]
name = "testgen"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.9.0"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
matchit = "0.8.5"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
url = "2.5.4"
